# dna-fuzzy-extractor-prototype

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: synthetic_markers.json
data/synthetic_profiles/: subject_001.csv  subject_001.json  subject_002.json  subject_003.json  subject_004.json  subject_005.json  subject_006.json  subject_007.json  subject_008.json  subject_009.json  subject_010.json
src/dna_proto/: __init__.py  cli.py
src/dna_proto/controller/: __init__.py  experiment.py
src/dna_proto/crypto/: __init__.py  hybrid_encrypt.py
src/dna_proto/data_gen/: generate_synthetic.py
src/dna_proto/dna_input/: __init__.py  loader.py  schema.py
src/dna_proto/evaluation/: __init__.py  metrics.py  report.py
src/dna_proto/fuzzing/: __init__.py  campaign.py  mutators.py
src/dna_proto/fuzzy_extractor/: __init__.py  gen.py  rep.py  secure_sketch.py
src/dna_proto/kdf_keys/: __init__.py  kdf.py  x25519_keys.py
src/dna_proto/preprocess/: __init__.py  encode_snp.py  encode_str.py  vectorize.py
tests/: conftest.py  test_cli.py  test_crypto.py  test_dna_input.py  test_encoding.py  test_evaluation.py  test_experiment.py  test_fuzzing.py  test_fuzzy_extractor.py  test_kdf_keys.py  test_preprocess.py
