[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dna-proto"
version = "0.1.0"
description = "DNA Fuzzy Extractor Research Prototype"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["dna", "fuzzy-extractor", "cryptography", "biometrics", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Security :: Cryptography",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cryptography>=41.0",
    "click>=8.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
dna-proto = "dna_proto.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dna_proto"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
